--- a/style2.css
+++ b/style2.css
@@ -19,4 +19,5 @@ button {
     border-right: double black;
     border-top: dotted pink;
     border-bottom: outset purple;
+    border-radius:50%;
 }
