--- a/unit-style.css
+++ b/unit-style.css
@@ -2,3 +2,18 @@ h1 {
     border:2px solid black;
     width: 50%;
 }
+
+#outer{
+    height: 400px;
+    width: 400px;
+    border: 2px solid black;
+    background-color: cornflowerblue;
+    font-size: 20px;
+}
+
+#inner {
+    height: 100px;
+    width: 100px;
+    background-color: pink;
+    font-size: 2em;
+}
